--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <h1>Effective Solutions for Your Business</h1>
     <button>Order Service</button>
     <main>
+      <h2>Our Experience</h2>
       <section>
         <ul>
           <li>
