--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <ul>
           <li>
             <img
-              src="/images/Mark.jpg"
+              src="./images/Mark.jpg"
               width="264"
               alt="Zdjecie Mark Guero Product
             Designer"
@@ -73,7 +73,7 @@
           </li>
           <li>
             <img
-              src="/images/Tom.jpg"
+              src="./images/Tom.jpg"
               width="264"
               alt="Zdjecie Tom Ford Frontend Developer"
             />
@@ -82,7 +82,7 @@
           </li>
           <li>
             <img
-              src="/images/Camila.jpg"
+              src="./images/Camila.jpg"
               width="264"
               alt="Zdjecie Camila Garcia Marketing"
             />
@@ -91,7 +91,7 @@
           </li>
           <li>
             <img
-              src="/images/Daniel.jpg"
+              src="./images/Daniel.jpg"
               width="264"
               alt="Zdjecie Daniel Wilson UI Designer"
             />
