--- a/index.html
+++ b/index.html
@@ -3,30 +3,32 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>WebStudio</title>
   </head>
   <body>
     <header>
-      <a href="/index.html">WEBSTUDIO</a>
+      <nav>
+        <a href="/index.html">WebStudio</a>
+        <ul>
+          <li><a href="/index.html">Studio</a></li>
+          <li><a href="/index.html">Portfolio</a></li>
+          <li><a href="/index.html">Contacts</a></li>
+        </ul>
+      </nav>
+      <adress>
+        <ul>
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="callto:+11(000)111-11-11">+11(000)111-11-11</a></li>
+        </ul>
+      </adress>
     </header>
-    <nav>
-      <ul>
-        <li><a href="/index.html">Studio</a></li>
-        <li><a href="/index.html">Portoflio</a></li>
-        <li><a href="/index.html">Contacts</a></li>
-      </ul>
-    </nav>
-    <adress>
-      <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="callto:+11(000) 111-11-11">+11 (000) 111-11-11</a></li>
-      </ul>
-    </adress>
-    <h1>Effective Solutions for Your Business</h1>
-    <button>Order Service</button>
     <main>
-      <h2>Our Experience</h2>
       <section>
+        <h1>Effective Solutions for Your Business</h1>
+        <button type="button">Order Service</button>
+      </section>
+      <section>
+        <h2>Our Experience</h2>
         <ul>
           <li>
             <h3>Strategy</h3>
@@ -59,16 +61,16 @@
         </ul>
       </section>
       <section>
-        <h2>Our team</h2>
+        <h2>Our Team</h2>
         <ul>
           <li>
             <img
               src="./images/Mark.jpg"
               width="264"
-              alt="Zdjecie Mark Guero Product
+              alt="Zdjecie Mark Guerero Product
             Designer"
             />
-            <h3>Mark Guero</h3>
+            <h3>Mark Guerero</h3>
             <p>Product Designer</p>
           </li>
           <li>
@@ -102,7 +104,7 @@
       </section>
     </main>
     <footer>
-      <a href="/index.html">WEBSTUDIO</a>
+      <a href="./index.html">WebStudio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
