--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <header>
       <nav>
-        <a href="/index.html">WebStudio</a>
+        <a href="./index.html">WebStudio</a>
         <ul>
           <li><a href="/index.html">Studio</a></li>
           <li><a href="/index.html">Portfolio</a></li>
@@ -18,7 +18,7 @@
       <adress>
         <ul>
           <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="callto:+11(000)111-11-11">+11(000)111-11-11</a></li>
+          <li><a href="callto:+11000111-11-11">+11 (000) 111-11-11</a></li>
         </ul>
       </adress>
     </header>
@@ -67,10 +67,10 @@
             <img
               src="./images/Mark.jpg"
               width="264"
-              alt="Zdjecie Mark Guerero Product
+              alt="Zdjecie Mark Guerrero Product
             Designer"
             />
-            <h3>Mark Guerero</h3>
+            <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
           <li>
