--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
       </nav>
       <adress>
         <ul>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="callto:+11000111-11-11">+11 (000) 111-11-11</a></li>
+          <li>
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a href="callto:+11000111-11-11">+11 (000) 111-11-11</a>
+          </li>
         </ul>
       </adress>
     </header>
