--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
           <li><a href="/index.html">Contacts</a></li>
         </ul>
       </nav>
-      <adress>
+      <address>
         <ul>
           <li>
             <a href="mailto:info@devstudio.com">info@devstudio.com</a>
             <a href="callto:+11000111-11-11">+11 (000) 111-11-11</a>
           </li>
         </ul>
-      </adress>
+      </address>
     </header>
     <main>
       <section>
